<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SeekBarPreference
        android:key="pref_brightness"
        android:title="@string/pref_title_brightness"
        android:defaultValue="20"
        android:max="100" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="15"
        android:entries="@array/frames_per_second_values"
        android:entryValues="@array/frames_per_second_values"
        android:key="example_list"
        android:title="@string/title_fps" />

    <!--<ListPreference-->
        <!--android:defaultValue="15"-->
        <!--android:dialogTitle="@string/title_fps"-->
        <!--android:entries="@array/frames_per_second_values"-->
        <!--android:entryValues="@array/frames_per_second"-->
        <!--android:key="@string/pref_fps"-->
        <!--android:summary="@string/summary_fps"-->
        <!--android:title="@string/title_fps" />-->

</PreferenceScreen>
